Adicionando responsividade ao site.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="outputBox" id="outputBox">
-            <img src="assets/High quality products 1 1.svg" alt="Imagem de pessoa procurando por um diamante">
+            <img class="findingImage" src="assets/High quality products 1 1.svg" alt="Imagem de pessoa procurando por um diamante">
             <h2 class="notFoundTitle">Nenhuma mensagem encontrada</h2>
             <p class="notFoundText">Digite um texto que você deseja criptografar ou descriptografar.</p>
         </div>
